# Claude-Plotter

./: .gitignore  CLAUDE.md  HUMAN_REVIEW_TODO.md  README.md  build_app.sh  plotter_barplot_app.py  plotter_comparisons.py  plotter_functions.py  plotter_import_pzfx.py  plotter_plotly_theme.py  plotter_project.py  plotter_registry.py  plotter_server.py  plotter_spec_grouped_bar.py  plotter_spec_line.py  plotter_webview.py  prism_barplot_app.py  prism_functions.py  pyproject.toml  repomix-output.xml  repomix-small.txt  requirements.txt  run_all.py  setup.sh  test_stats_verification.py
.claude/: launch.json
RefractionApp/: project.yml
RefractionApp/Refraction/App/: AppState.swift  RefractionApp.swift
RefractionApp/Refraction/Models/: Analysis.swift  ArchitectureGuideCatalog.swift  ChartConfig.swift  DataTable.swift  Experiment.swift  Graph.swift  ProjectState.swift  RenderStyle.swift  StatsTestCatalog.swift  TableType.swift
RefractionApp/Refraction/Services/: APIClient.swift  DebugLog.swift  PythonServer.swift
RefractionApp/Refraction/Views/: ContentView.swift  DebugConsoleView.swift  ErrorView.swift  ExportChartDialog.swift  LaTeXView.swift  ToolbarBanner.swift  WelcomeView.swift
RefractionRenderer/Sources/RefractionRenderer/: AxisRenderer.swift  BarRenderer.swift  BeforeAfterRenderer.swift  BoxRenderer.swift  ChartSpec.swift  DotPlotRenderer.swift  GroupedBarRenderer.swift  HistogramRenderer.swift  HitRegion.swift  KaplanMeierRenderer.swift  LineRenderer.swift  RenderHelpers.swift  ScatterRenderer.swift  StackedBarRenderer.swift  ViolinRenderer.swift
docs/: PLAN.md  mockup.html
plotter_web/src/: App.css  App.tsx  AxesTab.tsx  ChartArea.tsx  ControlPanel.tsx  DataTab.tsx  HelpPanel.tsx  PlotterChart.tsx  ResultsStrip.tsx  Sidebar.tsx  StatsTab.tsx  StyleTab.tsx  Toolbar.tsx  index.css  types.ts
refraction/analysis/: box.py  engine.py  helpers.py  histogram.py  kaplan_meier.py  schema.py  stats_annotator.py  violin.py
refraction/app/: execution.py  main.py  wiki.py
refraction/core/: chart_helpers.py  stats.py  tabs.py  types.py
refraction/server/: api.py  web_entry.py  webview.py
refraction/specs/: theme.py
scripts/: build_app.sh  bundle_python.sh  generate_icon.py
tests/: test_analysis.py  test_api.py  test_api_integration.py  test_canvas_renderer.py  test_control.py  test_edge_cases.py  test_invariants.py  test_modular.py  test_p1_p2_p3.py  test_phase3_plotly.py  test_png_render.py  test_spec_correctness.py  test_stats.py  test_validators.py  visual_test.py
tests/integration/: test_api.py  test_pipeline.py
(+24 files in other folders)
